--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
-*.m~
-libsvm/*
-sparsebayes/*
-*.DS_Store
+#ignore everything
+*
+
+#but...
+!.gitignore
+!.README.md
+!src/**/*.m
+!src/**/*.mat
+!datasets/**/*.m
+!datasets/**/*.mat
