--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,20 @@
 #but...
 !.gitignore
 !.README.md
-!src/*.m
-!src/*.mat
-!src/**/*.m
-!src/**/*.mat
-!datasets/*.m
-!datasets/*.mat
-!datasets/**/*.m
-!datasets/**/*.mat
+
+!/src
+src/*
+!/src/**/*.m
+!/src/**/*.mat
+
+!/datasets
+datatsets/*
+!/datasets/**/*.m
+!/datasets/**/*.mat
+
+
+!/libsvm
+libsvm/*
+
+!/sparseBayes
+sparseBayes/*
